# mixed-precision-dsp

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml  docs.yml  release.yml
applications/: CMakeLists.txt  README.md
applications/acquisition_demo/: CMakeLists.txt  acquisition_demo.cpp
applications/estimation_demo/: CMakeLists.txt  ekf_bearing_range.cpp  ukf_tracking.cpp
applications/fft_tradeoff/: CMakeLists.txt  fft_tradeoff.cpp
applications/fir_demo/: CMakeLists.txt  polyphase_filter.cpp
applications/iir_demo/: CMakeLists.txt  butterworth_lowpass.cpp
applications/image_demo/: CMakeLists.txt  edge_detection.cpp  image_pipeline.cpp  mixed_precision_image.cpp
applications/mp_comparison/: CMakeLists.txt  iir_precision_sweep.cpp
applications/precision_sweep/: CMakeLists.txt  precision_sweep.cpp
applications/scope_demo/: CMakeLists.txt  scope_demo.cpp
applications/spectrum_analyzer_demo/: CMakeLists.txt  spectrum_analyzer_demo.cpp
cmake/: dspConfig.cmake.in
cmake/toolchains/: riscv64-gcc.cmake
docs/: design.md  historical-fixed-point-fft.md  mixed-precision-format-design.md
docs-site/: astro.config.mjs  package.json
docs-site/src/content/docs/: index.mdx
docs-site/src/content/docs/acquisition/: cic.md  ddc.md  decimation-chain.md  demo.md  halfband.md  nco.md  overview.md  polyphase-decimator.md
docs-site/src/content/docs/analysis/: acquisition-precision.md  overview.md
docs-site/src/content/docs/api/: concepts.md  types.md
docs-site/src/content/docs/conditioning/: agc.md  compressor.md  envelope.md
docs-site/src/content/docs/estimation/: adaptive.md  ekf.md  kalman.md  ukf.md
docs-site/src/content/docs/filter/: bilinear-transform.md  biquad.md  filtfilt.md  overview.md
docs-site/src/content/docs/fundamentals/: quantization.md  sampling.md  signals.md
docs-site/src/content/docs/getting-started/: installation.md  quick-start.md
docs-site/src/content/docs/image/: convolution.md  edge-detection.md  morphology.md  overview.md
docs-site/src/content/docs/instrument/: scope-demo.md  spectrum-analyzer-demo.md  spectrum-analyzer-overview.md
docs-site/src/content/docs/mixed-precision/: format-guide.md  historical-fft.md  historical.md  motivation.md  numerical-issues.md  sensor-noise.md  three-scalar.md
docs-site/src/content/docs/multirate/: overview.md  patterns.md
docs-site/src/content/docs/spectral/: bluestein.md  dft-fft.md  psd.md  spectrogram.md  z-transform.md
docs-site/src/content/docs/windows/: comparison.md  overview.md
docs/assessments/: KFR_vs_mixed-precision-dsp.md  image-api-opencv-comparison.md  sensor-noise-arithmetic-precision.md
docs/designs/: decimation-chain.md  projection-embedding-generalization.md  python-integration.md
docs/plans/: v0.5.0-beta-roadmap.md  v0.5.0-implementation-plan.md
docs/topics/: mixed-precision-iir-filter-design.md
include/sw/dsp/: dsp.hpp  version.hpp
include/sw/dsp/acquisition/: acquisition.hpp  cic.hpp  ddc.hpp  decimation_chain.hpp  halfband.hpp  nco.hpp  polyphase_decimator.hpp
include/sw/dsp/acquisition/detail/: decimator_step.hpp
include/sw/dsp/analysis/: acquisition_precision.hpp  analysis.hpp  condition.hpp  sensitivity.hpp  stability.hpp
include/sw/dsp/concepts/: filter.hpp  scalar.hpp  signal.hpp
include/sw/dsp/conditioning/: agc.hpp  compressor.hpp  conditioning.hpp  envelope.hpp  src.hpp
include/sw/dsp/estimation/: ekf.hpp  estimation.hpp  kalman.hpp  lms.hpp  rls.hpp  ukf.hpp
include/sw/dsp/filter/: filter.hpp  filtfilt.hpp
include/sw/dsp/filter/biquad/: biquad.hpp  cascade.hpp  smooth.hpp  state.hpp
include/sw/dsp/filter/fir/: fir.hpp  fir_design.hpp  fir_filter.hpp  overlap.hpp  polyphase.hpp  (+1 more)
include/sw/dsp/image/: convolve2d.hpp  edge.hpp  generators.hpp  image.hpp  morphology.hpp  separable.hpp
include/sw/dsp/instrument/: calibration.hpp  channel_aligner.hpp  display_envelope.hpp  fractional_delay.hpp  measurements.hpp  peak_detect.hpp  ring_buffer.hpp  trigger.hpp
include/sw/dsp/io/: bmp.hpp  csv.hpp  io.hpp  pgm.hpp  ppm.hpp  raw.hpp  wav.hpp
include/sw/dsp/math/: constants.hpp  denormal.hpp  elliptic_integrals.hpp  polynomial.hpp  quadratic.hpp  root_finder.hpp
include/sw/dsp/quantization/: adc.hpp  dac.hpp  dither.hpp  noise_shaping.hpp  quantization.hpp  sqnr.hpp
include/sw/dsp/signals/: generators.hpp  sampling.hpp  signal.hpp
include/sw/dsp/spectral/: bluestein.hpp  dft.hpp  fft.hpp  laplace.hpp  psd.hpp  spectral.hpp  spectrogram.hpp  ztransform.hpp
include/sw/dsp/spectrum/: detectors.hpp  front_end_corrector.hpp  markers.hpp  rbw_filter.hpp  realtime_spectrum.hpp  swept_lo.hpp  trace_averaging.hpp  vbw_filter.hpp  waterfall_buffer.hpp
include/sw/dsp/types/: biquad_coefficients.hpp  complex_pair.hpp  filter_kind.hpp  filter_spec.hpp  pole_zero_pair.hpp  projection.hpp  transfer_function.hpp
include/sw/dsp/viz/: magnitude.hpp  phase.hpp  plot.hpp  pole_zero.hpp  viz.hpp
include/sw/dsp/windows/: bartlett_hann.hpp  blackman.hpp  dolph_chebyshev.hpp  flat_top.hpp  gaussian.hpp  hamming.hpp  hanning.hpp  kaiser.hpp  rectangular.hpp  tukey.hpp  window.hpp  windows.hpp
tests/: CMakeLists.txt  README.md  test_acquisition_precision.cpp  test_analysis.cpp  test_bessel.cpp  test_biquad.cpp  test_bluestein.cpp  test_butterworth.cpp  test_chebyshev.cpp  test_cic.cpp  test_concepts.cpp  test_conditioning.cpp  test_ddc.cpp  test_decimation_chain.cpp  test_elliptic.cpp  test_fft.cpp  test_filtfilt.cpp  test_fir.cpp  test_fir_multirate.cpp  test_generators.cpp  test_halfband.cpp  test_image.cpp  test_image_generators.cpp  test_image_io.cpp  test_instrument_calibration.cpp  test_instrument_channel_aligner.cpp  test_instrument_display_envelope.cpp  test_instrument_fractional_delay.cpp  test_instrument_measurements.cpp  test_instrument_peak_detect.cpp  test_instrument_ring_buffer.cpp  test_instrument_trigger.cpp  test_io.cpp  test_kalman.cpp  test_nco.cpp  test_noise_shaping.cpp  test_projection.cpp  test_quantization.cpp  test_remez.cpp  test_spectral.cpp  (+11 more)
tests/data/: example_frontend_cal.csv
(+20 files in other folders)
