# Applications (demonstration programs)

# Each subdirectory contains its own CMakeLists.txt
# Uncomment as implementations become available

# IIR filter demos
add_subdirectory(iir_demo)

# Phase 6: FIR filters
# add_subdirectory(fir_demo)

# Phase 7: Spectral methods
# add_subdirectory(spectral_demo)

# Phase 5: Quantization
# add_subdirectory(quantization_demo)

# Phase 9: Estimation
# add_subdirectory(estimation_demo)

# Phase 10: Image processing
# add_subdirectory(image_demo)

# Phase 8: Signal conditioning
# add_subdirectory(conditioning_demo)
